// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CommentAbstract component correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 20,
        "elevation": 4,
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingTop": 12,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "flex-start",
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "default_avatar_1",
                }
              }
              style={
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "marginRight": 8,
                  "width": 40,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#000000",
                "fontSize": 15,
              }
            }
            theme={
              Object {
                "colors": Object {
                  "disabled": "hsl(208, 8%, 90%)",
                  "divider": "#bcbbc1",
                  "error": "#ff190c",
                  "grey0": "#393e42",
                  "grey1": "#43484d",
                  "grey2": "#5e6977",
                  "grey3": "#86939e",
                  "grey4": "#bdc6cf",
                  "grey5": "#e1e8ee",
                  "greyOutline": "#bbb",
                  "platform": Object {
                    "android": Object {
                      "error": "#f44336",
                      "primary": "#2196f3",
                      "secondary": "#9C27B0",
                      "success": "#4caf50",
                      "warning": "#ffeb3b",
                    },
                    "ios": Object {
                      "error": "#ff3b30",
                      "primary": "#007aff",
                      "secondary": "#5856d6",
                      "success": "#4cd964",
                      "warning": "#ffcc00",
                    },
                  },
                  "primary": "#2089dc",
                  "searchBg": "#303337",
                  "secondary": "#8F0CE8",
                  "success": "#52c41a",
                  "warning": "#faad14",
                },
              }
            }
          >
             
            
          </Text>
        </View>
        <View
          style={
            Object {
              "paddingVertical": 12,
            }
          }
        >
          <Text
            style={
              Object {
                "paddingVertical": 20,
              }
            }
          >
             
            我觉得这门课很垃圾
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-around",
              "paddingBottom": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 12,
                "padding": 5,
              }
            }
          >
            2019-07-18 23:07:37
          </Text>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 20,
                "opacity": 1,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "pinglun",
                }
              }
              style={
                Object {
                  "height": 14,
                  "resizeMode": "contain",
                  "width": 14,
                }
              }
            />
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "padding": 5,
                }
              }
            >
              评论
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 20,
                "opacity": 1,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "dianzan",
                }
              }
              style={
                Object {
                  "height": 14,
                  "resizeMode": "contain",
                  "tintColor": "orange",
                  "width": 14,
                }
              }
            />
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "padding": 5,
                }
              }
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "borderRadius": 5,
              "paddingBottom": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 3,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
            >
               
              
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
            >
              : 服服服
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 3,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
            >
               
              
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
            >
              : 八九十年代不
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 3,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
            >
               
              
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
            >
              : 同意呀
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "borderColor": "lightgrey",
          "borderTopWidth": 0.2,
          "bottom": 0,
          "height": 50,
          "paddingHorizontal": 10,
          "paddingVertical": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        keyboardShouldPersistTaps="always"
        style={
          Object {
            "contentSize": 0,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "whitesmoke",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "orange",
                  "borderRadius": 8,
                  "borderWidth": 0.5,
                  "flex": 8,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <TextInput
                allowFontScaling={true}
                autoFocus={true}
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="点击输入回复"
                rejectResponderTermination={true}
                style={
                  Object {
                    "fontSize": 15,
                    "padding": 2,
                    "textAlign": "left",
                    "width": "100%",
                  }
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1.5,
                  "marginVertical": 0,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FDD326",
                    "borderRadius": 8,
                    "height": "auto",
                    "marginHorizontal": 8,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "字魂70号-灵悦黑体",
                      "fontSize": 15,
                      "lineHeight": 15,
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "disabled": "hsl(208, 8%, 90%)",
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "platform": Object {
                          "android": Object {
                            "error": "#f44336",
                            "primary": "#2196f3",
                            "secondary": "#9C27B0",
                            "success": "#4caf50",
                            "warning": "#ffeb3b",
                          },
                          "ios": Object {
                            "error": "#ff3b30",
                            "primary": "#007aff",
                            "secondary": "#5856d6",
                            "success": "#4cd964",
                            "warning": "#ffcc00",
                          },
                        },
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#8F0CE8",
                        "success": "#52c41a",
                        "warning": "#faad14",
                      },
                    }
                  }
                >
                   发送
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </Modal>
</View>
`;

exports[`renders CommentAbstract component correctly 2`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": 100,
          "justifyContent": "center",
          "width": 340,
        }
      }
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 20,
          }
        }
      >
         还没有人评论，快来抢占沙发吧😋
      </Text>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "borderColor": "lightgrey",
          "borderTopWidth": 0.2,
          "bottom": 0,
          "height": 50,
          "paddingHorizontal": 10,
          "paddingVertical": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        keyboardShouldPersistTaps="always"
        style={
          Object {
            "contentSize": 0,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "whitesmoke",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "orange",
                  "borderRadius": 8,
                  "borderWidth": 0.5,
                  "flex": 8,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <TextInput
                allowFontScaling={true}
                autoFocus={true}
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="点击输入回复"
                rejectResponderTermination={true}
                style={
                  Object {
                    "fontSize": 15,
                    "padding": 2,
                    "textAlign": "left",
                    "width": "100%",
                  }
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flex": 1.5,
                  "marginVertical": 0,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#FDD326",
                    "borderRadius": 8,
                    "height": "auto",
                    "marginHorizontal": 8,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "字魂70号-灵悦黑体",
                      "fontSize": 15,
                      "lineHeight": 15,
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "disabled": "hsl(208, 8%, 90%)",
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "platform": Object {
                          "android": Object {
                            "error": "#f44336",
                            "primary": "#2196f3",
                            "secondary": "#9C27B0",
                            "success": "#4caf50",
                            "warning": "#ffeb3b",
                          },
                          "ios": Object {
                            "error": "#ff3b30",
                            "primary": "#007aff",
                            "secondary": "#5856d6",
                            "success": "#4cd964",
                            "warning": "#ffcc00",
                          },
                        },
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#8F0CE8",
                        "success": "#52c41a",
                        "warning": "#faad14",
                      },
                    }
                  }
                >
                   发送
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </Modal>
</View>
`;
